# frominteger-fix

./: .gitignore  CHANGELOG.md  cabal.project  frominteger-fix.cabal
benchmark/: Benchmark.hs
src/: IntegerToFloat.hs
test/: Spec.hs
