cabal-version:      2.4
name:               frominteger-fix
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  IntegerToFloat
    build-depends:    base >=4.15.0.0, ghc-bignum
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite frominteger-test
    type:             exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:          Spec.hs
    build-depends:    base >=4.15.0.0, fp-ieee, QuickCheck, hspec, frominteger-fix
    default-language: Haskell2010

benchmark frominteger-benchmark
    type: exitcode-stdio-1.0
    hs-source-dirs: benchmark
    main-is: Benchmark.hs
    build-depends: base >=4.15.0.0, fp-ieee, gauge, frominteger-fix
    default-language: Haskell2010
